# cnes

./: .gitignore  Cargo.toml
src/: bus.rs  cartridge.rs  common.rs  cpu.rs  joypad.rs  lib.rs  main.rs  opcodes.rs  player.rs  simple_run.rs  trace.rs
src/apu/: dmc.rs  envelope.rs  frame_counter.rs  length_counter.rs  mod.rs  noise.rs  pulse.rs  triangle.rs
src/cpu/: mod.rs  opcodes.rs  trace.rs
src/ppu/: frame.rs  mod.rs  palette.rs
src/ppu/registers/: addr.rs  controller.rs  mask.rs  mod.rs  scroll.rs  scroll_addr.rs  status.rs
