[package]
name = "cnes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cnes"
required-features = ["player"]

[features]
default = ["player"]
player = ["dep:sdl2", "dep:env_logger", "dep:ringbuf"]

[dependencies]
lazy_static = "1.4.0"
bitflags = "1.3"
log = "0.4.0"
sdl2 = { version = "0.35", optional = true }
env_logger = { version = "0.9.0", optional = true }
ringbuf = { version = "0.3.2", optional = true }